Script element should keep the wrapper object alive until the load or error event are dispatched https://bugs.webkit.org/show_bug.cgi?id=305566

Reviewed by Ryosuke Niwa.

An assertion failed in JSEventListener::ensureJSFunction since a wrapper object
of a script element was already reclaimed when the load event was dispatched.

Made ScriptElement an ActiveDOMObject subclass, and implemented
virtualHasPendingActivity() method that returns true if it has a relevant event
listener and the script is loading in order to keep the wrapper object alive.

Tests: http/tests/dom/script-error-event-gc.html
       http/tests/dom/script-load-event-gc.html
       http/tests/svg/script-error-event-gc.html
       http/tests/svg/script-load-event-gc.html

* LayoutTests/http/tests/dom/script-error-event-gc-expected.txt: Added.
* LayoutTests/http/tests/dom/script-error-event-gc.html: Added.
* LayoutTests/http/tests/dom/script-load-event-gc-expected.txt: Added.
* LayoutTests/http/tests/dom/script-load-event-gc.html: Added.
* LayoutTests/http/tests/svg/script-error-event-gc-expected.txt: Added.
* LayoutTests/http/tests/svg/script-error-event-gc.html: Added.
* LayoutTests/http/tests/svg/script-load-event-gc-expected.txt: Added.
* LayoutTests/http/tests/svg/script-load-event-gc.html: Added.
* Source/WebCore/dom/ScriptElement.cpp:
(WebCore::ScriptElement::ScriptElement):
(WebCore::ScriptElement::dispatchErrorEvent):
(WebCore::ScriptElement::virtualHasPendingActivity const):
(WebCore::ScriptElement::ref const): Deleted.
(WebCore::ScriptElement::deref const): Deleted.
* Source/WebCore/dom/ScriptElement.h:
(WebCore::ScriptElement::loadableScript const):
(WebCore::ScriptElement::setHasRelevantLoadEventsListener):
(WebCore::ScriptElement::loadableScript): Deleted.
* Source/WebCore/html/HTMLScriptElement.cpp:
(WebCore::HTMLScriptElement::HTMLScriptElement):
(WebCore::HTMLScriptElement::create):
(WebCore::HTMLScriptElement::dispatchLoadEvent):
(WebCore::HTMLScriptElement::cloneElementWithoutAttributesAndChildren const):
(WebCore::HTMLScriptElement::didMoveToNewDocument):
(WebCore::HTMLScriptElement::eventListenersDidChange):
* Source/WebCore/html/HTMLScriptElement.h:
* Source/WebCore/html/HTMLScriptElement.idl:
* Source/WebCore/svg/SVGScriptElement.cpp:
(WebCore::SVGScriptElement::create):
(WebCore::SVGScriptElement::cloneElementWithoutAttributesAndChildren const):
(WebCore::SVGScriptElement::dispatchLoadEvent):
(WebCore::SVGScriptElement::didMoveToNewDocument):
(WebCore::SVGScriptElement::eventListenersDidChange):
* Source/WebCore/svg/SVGScriptElement.h:
* Source/WebCore/svg/SVGScriptElement.idl:

Canonical link: https://commits.webkit.org/308535@main