Source/WebCore/svg/SVGScriptElement.h
@@ -33,11 +33,13 @@ class SVGScriptElement final : public SVGElement, public SVGURIReference, public
     WTF_MAKE_TZONE_ALLOCATED(SVGScriptElement);
     WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR(SVGScriptElement);
 public:
-    static Ref<SVGScriptElement> create(const QualifiedName&, Document&, bool wasInsertedByParser);
+    static Ref<SVGScriptElement> create(const QualifiedName&, Document&, bool wasInsertedByParser, bool alreadyStarted = false);
 
     using PropertyRegistry = SVGPropertyOwnerRegistry<SVGScriptElement, SVGElement, SVGURIReference>;
-    using SVGElement::ref;
-    using SVGElement::deref;
+
+    // ActiveDOMObject
+    void ref() const final { SVGElement::ref(); }
+    void deref() const final { SVGElement::deref(); }
 
     bool async() const;
 
@@ -51,6 +53,7 @@ private:
     void didFinishInsertingNode() final;
     void childrenChanged(const ChildChange&) final;
     void finishParsingChildren() final;
+    void didMoveToNewDocument(Document& oldDocument, Document& newDocument) final;
 
     bool NODELETE isURLAttribute(const Attribute&) const final;
     void addSubresourceAttributeURLs(ListHashSet<URL>&) const final;
@@ -69,7 +72,7 @@ private:
     bool hasNoModuleAttribute() const final { return false; }
     ReferrerPolicy referrerPolicy() const final { return ReferrerPolicy::EmptyString; }
     bool hasSourceAttribute() const final { return hasAttribute(SVGNames::hrefAttr) || hasAttribute(XLinkNames::hrefAttr); }
-    void dispatchLoadEvent() final { SVGURIReference::dispatchLoadEvent(); }
+    void dispatchLoadEvent() final;
     void dispatchErrorEvent() final;
 
     // SVGElement
@@ -80,6 +83,9 @@ private:
     void setHaveFiredLoadEvent(bool haveFiredLoadEvent) final { ScriptElement::setHaveFiredLoadEvent(haveFiredLoadEvent); }
     bool errorOccurred() const final { return ScriptElement::errorOccurred(); }
     void setErrorOccurred(bool errorOccurred) final { ScriptElement::setErrorOccurred(errorOccurred); }
+
+    // EventTarget
+    void eventListenersDidChange() final;
 
 #ifndef NDEBUG
     bool filterOutAnimatableAttribute(const QualifiedName& name) const final { return name == SVGNames::typeAttr; }
